Fix list header on mobile

--- a/src/pages/ListView/ListView.css
+++ b/src/pages/ListView/ListView.css
@@ -3,7 +3,7 @@
   position: relative;
   padding: 1.25rem;
   margin: 0 auto;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   background: var(--light-gray);
 }
 
@@ -57,6 +57,7 @@
 @media only screen and (min-width: 700px) {
   .list-view {
     padding: 1.25rem 2.5rem;
+    font-size: 1.25rem;
   }
 }
 
@@ -166,23 +167,21 @@
   color: var(--main-accent-color);
 }
 
-.list-summary__extra {
-  display: none;
+.list-summary__action {
+  display: block;
+  font-size: 1rem;
+  line-height: 1.25;
+  height: auto;
 }
 
 .list-summary__action {
-  position: relative;
-  top: -0.125em;
   display: inline-block;
-  font-size: 1rem;
-  line-height: 1;
-  height: auto;
 }
 
 .list-summary__action:before {
   content: '|';
   display: inline-block;
-  margin: 0 0.75em;
+  margin: 0 0.5em;
   font-weight: 400;
   color: var(--icon-a11y-gray);
 }
@@ -191,14 +190,20 @@
   display: none;
 }
 
+.list-summary__extra {
+  display: none;
+}
+
 @media only screen and (min-width: 650px) {
   .list-summary__extra {
     display: inline;
   }
-}
 
-@media only screen and (min-width: 1200px) {
-  .list-summary__action {
-    top: -0.25em;
+  .list-summary__mobile {
+    display: none;
+  }
+
+  .list-summary__action:before {
+    margin: 0 0.75em;
   }
 }
